--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ Django==5.2.4
 django-filter==25.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.1
+gunicorn==23.0.0
+packaging==25.0
 pillow==11.3.0
 PyJWT==2.10.1
 sqlparse==0.5.3
